--- a/style.css
+++ b/style.css
@@ -328,8 +328,9 @@ section {
 }
 
 .section-container {
-    gap: 4rem;
-    height: 80%;
+    gap: 2rem;
+    flex-direction: column;
+    /*height: 80%;*/
     
 }
 
